# album-detector

./: .gitignore  AlbumInfo.py  FileInfo.py  LICENSE  README.md  WORKSPACE.bazel  main.py  setup.py  utils.py
album_detector/: AlbumInfo.py  BUILD.bazel  FileInfo.py  __init__.py  album_info.py  export.py  file_info.py  knowledge.py  utils.py
tests/: BUILD.bazel  integration_test.py  test_all.py
tests/tools/: BUILD.bazel  mktestdata.py  rules_testdata.bzl
tools/: BUILD.bazel  index_browser.py  mktestdata.py  rules_testdata.bzl
