py_library(
  name = "album_detector_lib",
  srcs = [
    "album_info.py",
    "file_info.py",
    "utils.py",
    "knowledge.py",
    "export.py",
  ],
  visibility = ["//visibility:public"],
)

py_binary(
  name = "album_detector",
  srcs = ["__init__.py"],
  main = "__init__.py",
  deps = [":album_detector_lib"],
)

genrule(
  name = "mkindex",
  outs = ["index.json"],
  tools = [":album_detector"],
  cmd = "$(location :album_detector) --mkindex $@",
  visibility = ["//visibility:public"],
)
