load("//tests/tools:rules_testdata.bzl", "testdata_genrule")

testdata_genrule(
  name = "testdata",
  album_dirs = [
    # CONFIG: Add /path/to/music/collections
  ],
)

py_test(
    name = "integration_test",
    srcs = ["integration_test.py"],
    deps = [
      "//album_detector:album_detector_lib",
    ],
    data = [
      ":testdata"
    ],
)
