load("//tools:rules_testdata.bzl", "testdata_genrule")

py_binary(
  name = "mktestdata",
  srcs = ["mktestdata.py"],
  main = "mktestdata.py",
  deps = ["@stable//album_detector:album_detector_lib"],
)

testdata_genrule(
  name = "testdata",
  album_dirs = [
    # CONFIG: Add /path/to/music/collections
    "/Volumes/Hitachi/BODY/OK0/PACK3",
    "/Volumes/Hitachi/BODY/OK0/PACK6",
  ],
)
